# glaphica

./: .gitignore  AGENTS.md  Cargo.toml  DEBUG_INCREMENTAL_RENDER.md  LICENSE  README.md  TODO  draw_a_circle_output.json  log  replay.jsonl  replay.txt  test_model
.cargo/: config.toml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/agents/: store.json
.claude-flow/hive-mind/: state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/tasks/: store.json
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.planning/phases/01-channel-infrastructure/: 01-CONTEXT.md  01-PLAN.md  02-PLAN.md
.planning/phases/04-01-channel-infrastructure/: 04-01-SUMMARY.md
.planning/phases/04-02-runtime-thread-loop/: 04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/04-03-appcore-migration/: 04-03-01-PLAN-REVISED.md  04-03-01-PLAN.md  04-03-01-SUMMARY.md  04-03-02-PLAN.md  04-03-03-PLAN.md  04-03-04-PLAN.md  04-03-PLAN.md  04-03-VERIFICATION.md
.planning/phases/04-channel-infrastructure/: 04-01-PLAN.md  04-02-PLAN.md  04-CONTEXT.md
.planning/phases/4.2-runtime-thread-loop/: 4.2-RESEARCH.md
.sandbox/home/: .bash_history  .claude.json
.sandbox/home/.claude-flow/: update-state.json
.swarm/: state.json
codex_skills/glaphica-debugger/: SKILL.md
codex_skills/glaphica-debugger/agents/: openai.yaml
codex_skills/glaphica-debugger/references/: test-organization.md  triage.md  wgpu-submit-hazards.md
codex_skills/glaphica-debugger/scripts/: print_debug_env.sh
crates/app/: Cargo.toml
crates/app/src/: config.rs  engine_thread.rs  integration.rs  layer_image_export.rs  layer_preview.rs  lib.rs  main_thread.rs  screen_blitter.rs  screen_blitter_test.rs  trace.rs
crates/atlas/: Cargo.toml
crates/atlas/src/: backend.rs  key.rs  layout.rs  lib.rs
crates/brush_execution/: Cargo.toml  DESIGN_DECISIONS.md
crates/brush_execution/src/: lib.rs
crates/brushes/: Cargo.toml
crates/brushes/docs/: brush_pipeline_summary.md
crates/brushes/src/: brush_registry.rs  brush_spec.rs  config.rs  (+8 more)
crates/code_analysis/: Cargo.toml
crates/document/: Cargo.toml
crates/driver/: Cargo.toml
crates/engine/: Cargo.toml
crates/frame_scheduler/: Cargo.toml
crates/glaphica/: Cargo.toml
crates/glaphica-constants/: Cargo.toml
crates/glaphica/src/: desktop_app.rs  driver_bridge.rs  egui_renderer.rs  engine_bridge.rs  engine_core.rs  input.rs  lib.rs  main.rs  phase4_test_utils.rs  phase4_threaded_tests.rs  run_config.rs  sample_source.rs  theme.rs
crates/glaphica/src/app_core/: mod.rs
crates/glaphica/src/brush_ui/: mapping.rs  mod.rs  state.rs
crates/glaphica/src/components/: config_panel.rs  layer_tree.rs  mod.rs  sidebar.rs  status_bar.rs  top_bar.rs
crates/glaphica/src/overlay/: actions.rs  mod.rs  panels.rs  state.rs  texture_cache.rs
crates/glaphica/src/runtime/: execution.rs  mod.rs  protocol.rs
crates/glaphica_constants/: Cargo.toml
crates/glaphica_core/: Cargo.toml
crates/gpu_runtime/: Cargo.toml  wgpu.md
crates/gpu_runtime/src/: atlas_runtime.rs  brush_runtime.rs  context.rs  frame_batch.rs  lib.rs  render_composite_shader.wgsl  render_executor.rs  render_parametric_shader.wgsl  render_shader.wgsl  surface_runtime.rs  wgpu_brush_executor.rs
crates/gpu_runtime/src/builtin_brushes/: generic_executor.rs  mod.rs
crates/images/: Cargo.toml
crates/model/: Cargo.toml
crates/protocol/: Cargo.toml
crates/render_protocol/: AGENTS.md  Cargo.toml
crates/renderer/: AGENTS.md  Cargo.toml  DESIGN.md
crates/renderer/docs/: merge_ack_integration.md
crates/renderer/src/: brush_dab_write.wgsl  dirty.rs  geometry.rs  lib.rs  merge_tile.wgsl  planning.rs  render_tree.rs  renderer_cache_draw.rs  renderer_composite.rs  renderer_draw_builders.rs  renderer_frame.rs  renderer_init.rs  renderer_merge.rs  renderer_pipeline.rs  renderer_view_ops.rs  tests.rs  tile_composite.wgsl  tile_composite_r32float.wgsl  tile_composite_slot.wgsl  tile_composite_slot_r32float.wgsl  wgsl_tests.rs
crates/replay_protocol/: Cargo.toml
crates/stroke_input/: Cargo.toml
crates/thread_protocol/: Cargo.toml
crates/threads/: Cargo.toml
crates/tiles/: Cargo.toml
crates/tiles/docs/: TODO.md  api.md
crates/tiles/examples/: list_adapters.rs
crates/tiles/src/: atlas.rs  lib.rs  lifecycle.rs  merge_callback.rs  merge_submission.rs  model.rs  tests.rs  tile_key_encoding.rs
crates/tiles/src/atlas/: brush_buffer_storage.rs  core.rs  format.rs  format_core.rs  format_gpu.rs  gpu.rs  gpu_runtime.rs  group_preview.rs  layer_pixel_storage.rs  tier.rs
crates/window_replay/: Cargo.toml
docs/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  DOCUMENTATION_REVIEW_REPORT.md  INTEGRATIONS.md  MIGRATION_TODO.md  README.md  STACK.md  STRUCTURE.md  TESTING.md  phase4analysis.md  pipeline.md
docs/Instructions/: Review.md  app_core_error_design.md  coding_guidelines.md  debug_playbook.md  phase2_review_response.md  phase4_implementation_plan.md  tiles_model_runtime_refactor_guide.md  tiles_model_runtime_refactor_guide_review_1.md  wgpu.md
docs/Wiki/: merge_message_flow_decisions_2026-02-21.md
docs/architecture/: structure.md
docs/archive/: README.md
docs/debug/: README.md  brush_merge_duplicate_tiles_2026-02-23.md
docs/guides/: README.md  app-core-error-design.md  conventions.md  debug-playbook.md  testing.md  wgpu-guide.md
planning/: README.md  roadmap.md  state.md
test/records/: draw_a_circle_input.json  draw_a_circle_record_output.json  large_brushes_input.json  optimizing_input.json  optimizing_replay_output.json
tests/records/: actual.jsonl  expected.jsonl  replay.jsonl
(+69 files in other folders)
