[workspace]
members = ["crates/brush_execution",
    "crates/code_analysis",
    "crates/document",
    "crates/driver",
    "crates/frame_scheduler",
    "crates/glaphica",
    "crates/replay_protocol",
    "crates/render_protocol",
    "crates/renderer",
    "crates/tiles",
    "crates/window_replay",
    "crates/view",
]
resolver = "3"
