[workspace]
members = [
    "crates/atlas",
    "crates/images",
    "crates/glaphica_core",
    "crates/threads",
    "crates/thread_protocol",
    "crates/gpu_runtime",
    "crates/app",
    "crates/document",
    "crates/brushes",
    "crates/glaphica",
    "crates/frame_scheduler",
]

resolver = "3"

[workspace.dependencies]
