[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
glaphica_core = { path = "../glaphica_core" }
gpu_runtime = { path = "../gpu_runtime" }
document = { path = "../document" }
threads = { path = "../threads" }
thread_protocol = { path = "../thread_protocol" }
brushes = { path = "../brushes" }
atlas = { path = "../atlas" }
images = { path = "../images" }
stroke_input = { path = "../stroke_input" }

wgpu = "28.0.0"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.17"
egui = "0.33.3"
