[package]
name = "glaphica"
version = "0.1.0"
edition = "2024"

[dependencies]
brush_execution = { path = "../brush_execution" }
driver = { path = "../driver" }
document = { path = "../document" }
frame_scheduler = { path = "../frame_scheduler" }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
model = { path = "../model" }
pollster = "0.4.0"
render_protocol = { path = "../render_protocol" }
replay_protocol = { path = "../replay_protocol" }
renderer = { path = "../renderer" }
tiles = { path = "../tiles" }
view = { path = "../view" }
window_replay = { path = "../window_replay" }
wgpu = "28.0.0"
winit = "0.30.12"
engine = { path = "../engine" }
protocol = { path = "../protocol" }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
rtrb = "0.3"

[dev-dependencies]
