[package]
name = "gpu_runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
blocking = ["dep:pollster"]

[dependencies]
atlas = { path = "../atlas" }
brushes = { path = "../brushes" }
document = { path = "../document" }
glaphica_core = { path = "../glaphica_core" }
thread_protocol = { path = "../thread_protocol" }

bytemuck = { version = "1", features = ["derive"] }
wgpu = "28.0.0"
pollster = { version = "0.4.0", optional = true }
