[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }
render_protocol = { path = "../render_protocol" }
tiles = { path = "../tiles" }
wgpu = "28.0.0"
pollster = "0.4.0"

[dev-dependencies]
naga = { version = "28.0.0", features = ["wgsl-in"] }
slotmap = "1.0.7"
