[package]
name = "tiles"
version = "0.1.0"
edition = "2024"

[features]
default = ["atlas-gpu"]
test-helpers = []
atlas-gpu = []

[dependencies]
render_protocol = { path = "../render_protocol" }
wgpu = "28.0.0"
pollster = "0.4.0"
bitvec = "1.0.1"

[dev-dependencies]
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
